--- a/Challenge08_601.qmd
+++ b/Challenge08_601.qmd
@@ -14,6 +14,8 @@ When you click the **Render** button a document will be generated that includes 
 
 ```{r}
 print("Playa Reina")
+
+print("Mariato, Veraguas")
 ```
 
 You can add options to executable code like this
