--- a/Challenge08_601.qmd
+++ b/Challenge08_601.qmd
@@ -16,6 +16,8 @@ When you click the **Render** button a document will be generated that includes 
 print("Playa Reina")
 
 print("Mariato, Veraguas")
+
+print("Panama")
 ```
 
 You can add options to executable code like this
