--- a/Challenge08_601.qmd
+++ b/Challenge08_601.qmd
@@ -13,11 +13,27 @@ Quarto enables you to weave together content and executable code into a finished
 When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
 
 ```{r}
+library(ggplot2)
+library(tidyverse)
 print("Playa Reina")
 
 print("Mariato, Veraguas")
 
 print("Panama")
+
+data <- read.csv("https://raw.githubusercontent.com/eiig26/public_data/main/property_data_final.csv")
+
+summary_table_UFO <- UFO_sighting_data %>%
+  group_by(country, shape) %>%
+  summarise(Count = n())
+
+summary_data <- data %>% group_by(Status) %>% summarise(Count = n())
+
+
+data_graph <- ggplot(summary_data, aes(x= Status, y=Count)) + geom_bar(stat = "identity") + labs(title = "Projects by Status", x = "Status", y = "Count")
+
+
+data_graph
 ```
 
 You can add options to executable code like this
